<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvl3text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/puzzle_look"
    android:orientation="vertical"
    tools:context=".lvl3_Activity">

    <TextView
        android:id="@+id/txtlvl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:linksClickable="false"
        android:text="@string/lvl3"
        android:textColor="#FFF"
        android:textSize="27sp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/bgquestion"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:letterSpacing=".05dp"
            android:text="@string/lvl3challenge"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:targetApi="lollipop" />


    </LinearLayout>

    <TextView
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/poetry"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@android:color/background_light"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:gravity="center|center_vertical"
        android:text="@string/example"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        android:textStyle="italic"
        android:visibility="visible"
        android:layout_marginStart="175dp"/>


    <LinearLayout
        android:id="@+id/l3area"
        android:layout_width="335dp"
        android:layout_height="332dp"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/bgpink"
        android:focusable="auto"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"


    >

        <TextView
            android:id="@+id/txtq1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="auto"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/q1"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="5"
            android:singleLine="true"
            android:typeface="normal"
            android:layout_marginRight="25dp"
            />

    </LinearLayout>


</LinearLayout>