<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Level2_Activity"
    android:background="@drawable/puzzle_look"

    >

    <TextView
        android:id="@+id/txtlvl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:linksClickable="false"
        android:text="@string/lvl2"
        android:textColor="#FFF"
        android:textSize="50sp"
        android:fontFamily="@font/veteran_typewriter"
        android:textAllCaps="true"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/bgquestion"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTop"
            android:layout_width="235dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bgquestion"
            android:fontFamily="@font/permanentmarker"
            android:text="@string/lvl2hint"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/lvl2challenge"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        android:textSize="20dp"
        android:fontFamily="@font/fredokaoneregular"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:gravity="center|center_vertical"
        android:text="@string/lvl2puzzle1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        android:visibility="visible"
        android:layout_marginStart="175dp"
        android:fontFamily="@font/specialelite"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:gravity="center|center_vertical"
        android:text="@string/lvl2puzzle2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        android:visibility="visible"
        android:layout_marginStart="175dp"
        android:fontFamily="@font/specialelite"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:gravity="center|center_vertical"
        android:text="@string/lvl2puzzle3"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        android:fontFamily="@font/specialelite"
        android:visibility="visible"
        android:layout_marginStart="175dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:gravity="center|center_vertical"
        android:text="@string/lvl2puzzle4"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        android:fontFamily="@font/specialelite"
        android:visibility="visible"
        android:layout_marginStart="175dp"/>

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="54dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bgquestion"
            android:ems="10"
            android:hint="   Answer:"
            android:inputType="textPersonName"
            android:fontFamily="@font/permanentmarker"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:orientation="horizontal"
        >


        <Button
            android:id="@+id/lvl3submit"
            android:layout_width="83dp"
            android:layout_height="79dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/nnext"
            android:onClick="sendMessage"

            />

    </LinearLayout>


</LinearLayout>
