<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".level04_game"
    android:background="@drawable/puzzle_look"
    >

    <TextView
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/decode"
        android:fontFamily="@font/veteran_typewriter"
        android:textColor="#FFF"
        android:textSize="36sp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="228dp"
        app:srcCompat="@drawable/caesar"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bgquestion"
        android:fontFamily="@font/permanentmarker"

        android:lineSpacingExtra="6dp"
        android:text="@string/game"
        android:textAlignment="center"
        android:textColor="#332FA2"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bgpink"
        android:ems="10"
        android:fontFamily="@font/permanentmarker"
        android:hint="@string/message"
        android:inputType="textPersonName"
        android:textAlignment="center"
        />

    <ImageButton
        android:id="@+id/lvl4submit"
        android:layout_width="129dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/play" />


</LinearLayout>