<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/puzzle_look"
    tools:context=".Main2Activity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/bgpurple"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="@color/q"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="208dp"
        android:layout_height="57dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/bgpurple"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/q"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/signin"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="127dp"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/register"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="179dp"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

    <TextView
        android:id="@+id/username"
        android:layout_width="161dp"
        android:layout_height="36dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="153dp"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/q"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="156dp"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:textColor="@color/q"/>
</android.support.constraint.ConstraintLayout>